fixes main feature alignment, CSS import, and close button element div to span and adds favicon

--- a/sass/partials/layout/_main.scss
+++ b/sass/partials/layout/_main.scss
@@ -51,8 +51,11 @@ main {
     padding: 8rem 1.5rem;
     background-color: #FCFAF7;
 }
-.features-wrapper section:not(:last-of-type){
-    margin-bottom: 4rem;
+
+@media sceen and (max-width: 699px) {
+    .features-wrapper section:not(:last-of-type) {
+        margin-bottom: 4rem;
+    }
 }
 
 // TEAM
